# lab-5-7-swag-team

src/: CMakeLists.txt
src/include/: document.hpp  document_builder.hpp  index_store.hpp  inverted_index.hpp  result.hpp  text_utils.hpp
src/src/: document_builder.cpp  index_store.cpp  inverted_index.cpp  text_utils.cpp
tests/: CMakeLists.txt  tests.cpp
